data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1747.wast
;; 8. **Test Description: Misaligned Branch Indices Leading to Incorrect Control Flow**    - Implement a control flow where `br_if` uses incorrect branch indices, leading to branches that do not align with the control flow graph’s path.    - **Constraint Check**: Validate that branch indices correctly map to their intended labels.    - **CFG Relevance**: Ensures alignment of branch indices with CFG paths.

(assert_invalid
  (module
    (func $misaligned-branch-indexes
      (block (result i32)
        (block (result i32)
          (br_if 2 (i32.const 1)) 
        )
      )
    )
  )
  "branch index out of range"
)